refactor(quiz): restructure APIs to RESTful design, split controllers and clean service layer